--- a/PersonalBudget_2.0.csproj
+++ b/PersonalBudget_2.0.csproj
@@ -62,6 +62,9 @@
     <Compile Include="AddIncome.xaml.cs">
       <DependentUpon>AddIncome.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ConfirmationWindow.xaml.cs">
+      <DependentUpon>ConfirmationWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EditExp.xaml.cs">
       <DependentUpon>EditExp.xaml</DependentUpon>
     </Compile>
@@ -71,6 +74,9 @@
     <Compile Include="EditIncExp.xaml.cs">
       <DependentUpon>EditIncExp.xaml</DependentUpon>
     </Compile>
+    <Compile Include="RemoveElement.xaml.cs">
+      <DependentUpon>RemoveElement.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WorkFile.cs" />
     <Page Include="AddExpense.xaml">
       <SubType>Designer</SubType>
@@ -79,6 +85,10 @@
     <Page Include="AddIncome.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ConfirmationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="EditExp.xaml">
       <SubType>Designer</SubType>
@@ -107,6 +117,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="RemoveElement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
