#Create Functional switching language

--- a/PersonalBudget_2.0.csproj
+++ b/PersonalBudget_2.0.csproj
@@ -106,6 +106,9 @@
       <DependentUpon>RemoveElement.xaml</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
+    <Compile Include="SettingsWindow.xaml.cs">
+      <DependentUpon>SettingsWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="WorkFile.cs" />
     <Page Include="AddExpense.xaml">
       <SubType>Designer</SubType>
@@ -147,6 +150,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="RemoveElement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
