--- a/PersonalBudget_2.0.csproj
+++ b/PersonalBudget_2.0.csproj
@@ -185,5 +185,8 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="SilvMoney.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
